src/objects/cadmus_core__Pack_DocConfig__c.object
<CustomObject>
    <fields>
        <fullName>cadmus_core__Doc_Config__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Doc Config</label>
        <referenceTo>cadmus_core__Doc_Config__c</referenceTo>
        <relationshipLabel>Pack DocConfigs</relationshipLabel>
        <relationshipName>Pack_DocConfigs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Merge_Sequence__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Describe to which merge &quot;group&quot; it belong</description>
        <inlineHelpText>Describe to which merge &quot;group&quot; it belong. A merge group is create for each Merge Sequence. Document name is taken from the document with Order matching the Merge sequence.</inlineHelpText>
        <label>Merge Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Order__c</fullName>
        <inlineHelpText>the order of the docconfigs to process. This is important when glueing PDF&apos;s together</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Pack__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>PDF Butler Pack</label>
        <referenceTo>cadmus_core__Pack__c</referenceTo>
        <relationshipLabel>Pack DocConfigs</relationshipLabel>
        <relationshipName>Pack_DocConfigs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Pack DocConfig</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pack DocConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>